--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -42,16 +42,76 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
         app:fillColor="#FFFFFFFF"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/userPic"
+        app:layout_constraintStart_toStartOf="@id/userPic"
         app:layout_constraintTop_toBottomOf="@id/userPic"
         app:pageColor="#00000000"
         app:radius="5dp"
         app:slideInterval="3000"
         app:strokeColor="#FF777777"
         app:strokeWidth="1dp" />
+
+    <LinearLayout
+        android:id="@+id/allForums"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        app:layout_constraintTop_toBottomOf="@id/carouselView"
+        app:layout_constraintStart_toStartOf="@id/carouselView"
+        app:layout_constraintEnd_toStartOf="@id/allSpecialists"
+        android:orientation="vertical"
+        android:background="@drawable/background_forum_specialist"
+        android:padding="16dp"
+        android:layout_marginTop="8dp">
+
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_forum" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Forum"
+            android:layout_marginTop="8dp"
+            android:textColor="@color/twitterColour"
+            android:textSize="14sp"
+            android:layout_gravity="center"
+            android:fontFamily="@font/firasans" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/allSpecialists"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        app:layout_constraintTop_toBottomOf="@id/carouselView"
+        app:layout_constraintEnd_toEndOf="@id/carouselView"
+        android:background="@drawable/background_forum_specialist"
+        app:layout_constraintStart_toEndOf="@id/allForums"
+        android:orientation="vertical"
+        android:padding="16dp"
+        android:layout_marginTop="8dp">
+
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_technician" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Specialist"
+            android:layout_marginTop="8dp"
+            android:textColor="@color/twitterColour"
+            android:textSize="14sp"
+            android:layout_gravity="center"
+            android:fontFamily="@font/firasans" />
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
