--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,178 +1,183 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragment.Home">
-
-<!--    <ProgressBar-->
-<!--        android:id="@+id/progressBar"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        android:visibility="gone"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent" />-->
-
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/userPic"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:src="@drawable/ic_user"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/userName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:fontFamily="@font/firasans"
-        android:text="Hi Maulana"
-        android:textColor="@android:color/black"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@id/userPic"
-        app:layout_constraintStart_toEndOf="@id/userPic"
-        app:layout_constraintTop_toTopOf="@id/userPic" />
-
-    <ImageView
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:src="@drawable/ic_search_black"
-        app:layout_constraintBottom_toBottomOf="@id/userPic"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/userPic" />
-
-    <com.synnapps.carouselview.CarouselView
-        android:id="@+id/carouselView"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        app:fillColor="#FFFFFFFF"
-        app:layout_constraintEnd_toEndOf="@id/userPic"
-        app:layout_constraintStart_toStartOf="@id/userPic"
-        app:layout_constraintTop_toBottomOf="@id/userPic"
-        app:pageColor="#00000000"
-        app:radius="3dp"
-        app:slideInterval="3000"
-        app:strokeColor="#FF777777"
-        app:strokeWidth="1dp" />
+        android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:id="@+id/allForums"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        app:layout_constraintTop_toBottomOf="@id/carouselView"
-        app:layout_constraintStart_toStartOf="@id/carouselView"
-        app:layout_constraintEnd_toStartOf="@id/allSpecialists"
-        android:orientation="vertical"
-        android:background="@drawable/background_forum_specialist"
-        android:padding="@dimen/activity_vertical_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin">
-
-        <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_forum" />
-
-        <TextView
+        <ProgressBar
+            android:id="@+id/progressBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Forum"
-            android:layout_marginTop="8dp"
-            android:textColor="@color/twitterColour"
-            android:textSize="14sp"
-            android:layout_gravity="center"
-            android:fontFamily="@font/firasans" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="gone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/allSpecialists"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        app:layout_constraintTop_toBottomOf="@id/carouselView"
-        app:layout_constraintEnd_toEndOf="@id/carouselView"
-        android:background="@drawable/background_forum_specialist"
-        app:layout_constraintStart_toEndOf="@id/allForums"
-        android:orientation="vertical"
-        android:padding="@dimen/activity_vertical_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin">
-
-        <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_technician" />
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/userPic"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:src="@drawable/ic_user"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
+            android:id="@+id/userName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Specialist"
-            android:layout_marginTop="8dp"
-            android:textColor="@color/twitterColour"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:fontFamily="@font/firasans"
+            android:text="Hi Maulana"
+            android:textColor="@android:color/black"
             android:textSize="14sp"
-            android:layout_gravity="center"
-            android:fontFamily="@font/firasans" />
+            app:layout_constraintBottom_toBottomOf="@id/userPic"
+            app:layout_constraintStart_toEndOf="@id/userPic"
+            app:layout_constraintTop_toTopOf="@id/userPic" />
 
-    </LinearLayout>
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"
+            android:src="@drawable/ic_search_black"
+            app:layout_constraintBottom_toBottomOf="@id/userPic"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/userPic" />
 
-    <TextView
-        android:id="@+id/titleForum"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/allForums"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:text="Forum (Terbaik)"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:fontFamily="@font/firasans"
-        android:textSize="16sp"
-        android:textColor="@android:color/black"
-        android:textStyle="bold" />
+        <com.synnapps.carouselview.CarouselView
+            android:id="@+id/carouselView"
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"
+            app:fillColor="#FFFFFFFF"
+            app:layout_constraintEnd_toEndOf="@id/userPic"
+            app:layout_constraintStart_toStartOf="@id/userPic"
+            app:layout_constraintTop_toBottomOf="@id/userPic"
+            app:pageColor="#00000000"
+            app:radius="3dp"
+            app:slideInterval="3000"
+            app:strokeColor="#FF777777"
+            app:strokeWidth="1dp" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/forumRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        app:layout_constraintTop_toBottomOf="@id/titleForum"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="@dimen/activity_vertical_margin"/>
+        <LinearLayout
+            android:id="@+id/allForums"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            app:layout_constraintTop_toBottomOf="@id/carouselView"
+            app:layout_constraintStart_toStartOf="@id/carouselView"
+            app:layout_constraintEnd_toStartOf="@id/allSpecialists"
+            android:orientation="vertical"
+            android:background="@drawable/background_forum_specialist"
+            android:padding="@dimen/activity_vertical_margin"
+            android:layout_marginTop="@dimen/activity_vertical_margin">
 
-    <TextView
-        android:id="@+id/titleSpecialist"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/forumRecyclerView"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:text="Specialist (Terbaik)"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:fontFamily="@font/firasans"
-        android:textSize="16sp"
-        android:textColor="@android:color/black"
-        android:textStyle="bold" />
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_forum" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/specialistRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        app:layout_constraintTop_toBottomOf="@id/titleSpecialist"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="@dimen/activity_vertical_margin"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Forum"
+                android:layout_marginTop="8dp"
+                android:textColor="@color/twitterColour"
+                android:textSize="14sp"
+                android:layout_gravity="center"
+                android:fontFamily="@font/firasans" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/allSpecialists"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            app:layout_constraintTop_toBottomOf="@id/carouselView"
+            app:layout_constraintEnd_toEndOf="@id/carouselView"
+            android:background="@drawable/background_forum_specialist"
+            app:layout_constraintStart_toEndOf="@id/allForums"
+            android:orientation="vertical"
+            android:padding="@dimen/activity_vertical_margin"
+            android:layout_marginTop="@dimen/activity_vertical_margin">
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_technician" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Specialist"
+                android:layout_marginTop="8dp"
+                android:textColor="@color/twitterColour"
+                android:textSize="14sp"
+                android:layout_gravity="center"
+                android:fontFamily="@font/firasans" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/titleForum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/allForums"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:text="Forum (Terbaik)"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:fontFamily="@font/firasans"
+            android:textSize="16sp"
+            android:textColor="@color/twitterColour"
+            android:textStyle="bold" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/forumRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"
+            app:layout_constraintTop_toBottomOf="@id/titleForum"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="@dimen/activity_vertical_margin"/>
+
+        <TextView
+            android:id="@+id/titleSpecialist"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/forumRecyclerView"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:text="Specialist (Terbaik)"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:fontFamily="@font/firasans"
+            android:textSize="16sp"
+            android:textColor="@color/twitterColour"
+            android:textStyle="bold" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/specialistRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"
+            app:layout_constraintTop_toBottomOf="@id/titleSpecialist"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="@dimen/activity_vertical_margin"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
