--- a/app/src/main/res/layout/forum_list.xml
+++ b/app/src/main/res/layout/forum_list.xml
@@ -4,50 +4,60 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="8dp"
-    android:layout_marginBottom="8dp">
+    android:layout_marginBottom="8dp"
+    android:background="@drawable/background_forum_specialist"
+    android:padding="@dimen/activity_vertical_margin">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/background_forum_specialist"
-        android:orientation="vertical"
-        android:padding="@dimen/activity_vertical_margin"
-        app:layout_constraintEnd_toEndOf="parent"
+    <ImageView
+        android:id="@+id/forumPic"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:background="@color/twitterColour"
+        android:padding="4dp"
+        app:layout_constraintEnd_toStartOf="@id/forumTitle"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <ImageView
-                android:id="@+id/forumPic"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:src="@color/twitterColour" />
+    <TextView
+        android:id="@+id/forumTitle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:fontFamily="@font/firasans"
+        android:text="Title"
+        android:maxLines="3"
+        android:textColor="@android:color/black"
+        android:textSize="14sp"
+        app:layout_constraintStart_toEndOf="@id/forumPic"
+        app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/forumTitle"
-                android:layout_width="wrap_content"
-                android:layout_marginStart="@dimen/activity_horizontal_margin"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/firasans"
-                android:text="Title"
-                android:textColor="@android:color/black"
-                android:textSize="16sp" />
-        </LinearLayout>
+    <TextView
+        android:id="@+id/forumTags"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="start"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/firasans"
+        android:text="Tag : Laptop"
+        android:textColor="@android:color/black"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/forumPic" />
 
-        <TextView
-            android:id="@+id/forumViews"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:fontFamily="@font/firasans"
-            android:layout_gravity="end"
-            android:text="Dilihat : 0"
-            android:textColor="@android:color/black"
-            android:textSize="12sp" />
-
-    </LinearLayout>
+    <TextView
+        android:id="@+id/forumViews"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/firasans"
+        android:text="Dilihat : 0"
+        android:textColor="@android:color/black"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/forumPic" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
