--- a/app/src/main/res/layout/fragment_add_forum.xml
+++ b/app/src/main/res/layout/fragment_add_forum.xml
@@ -73,7 +73,7 @@
                     android:layout_marginTop="@dimen/activity_vertical_margin">
 
                     <EditText
-                        android:id="@+id/forumDesc"
+                        android:id="@+id/forumDescription"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/rounded_edittext"
@@ -92,7 +92,32 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/activity_vertical_margin">
 
+                    <Spinner
+                        android:id="@+id/forumCategory"
+                        android:layout_width="195dp"
+                        android:layout_height="wrap_content"
+                        android:theme="@style/Spinner"
+                        android:spinnerMode="dropdown" />
+                </TableRow>
 
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/activity_vertical_margin">
+
+                    <EditText
+                        android:id="@+id/forumTags"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/rounded_edittext"
+                        android:ems="10"
+                        android:fontFamily="@font/firasans"
+                        android:hint="Tag"
+                        android:inputType="textMultiLine"
+                        android:padding="@dimen/activity_vertical_margin"
+                        android:textColor="@android:color/black"
+                        android:textCursorDrawable="@drawable/color_cursor"
+                        android:textSize="14sp" />
                 </TableRow>
 
             </TableLayout>
