--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -137,7 +137,7 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:text="Forum (Terbaik)"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:layout_marginTop="32dp"
             android:fontFamily="@font/firasans"
             android:textSize="16sp"
             android:textColor="@color/twitterColour"
@@ -152,7 +152,7 @@
             app:layout_constraintTop_toBottomOf="@id/titleForum"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="@dimen/activity_vertical_margin"/>
+            android:layout_marginTop="8dp"/>
 
         <TextView
             android:id="@+id/titleSpecialist"
