--- a/app/src/main/res/drawable/background_add_forum.xml
+++ b/app/src/main/res/drawable/background_add_forum.xml
@@ -8,7 +8,7 @@
 
             <stroke
                 android:width="0.5dp"
-                android:color="#000" />
+                android:color="@color/twitterColour" />
 
             <corners android:radius="15dp" />
 
