--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,7 +8,7 @@
     tools:context=".fragment.Home">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <ProgressBar
             android:id="@+id/progressBar"
@@ -136,11 +136,11 @@
             app:layout_constraintTop_toBottomOf="@id/allForums"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
-            android:text="Forum (Terbaik)"
+            android:text="Forum (Top 5)"
             android:layout_marginTop="32dp"
             android:fontFamily="@font/firasans"
             android:textSize="16sp"
-            android:textColor="@color/twitterColour"
+            android:textColor="@android:color/black"
             android:textStyle="bold" />
 
         <androidx.recyclerview.widget.RecyclerView
@@ -151,8 +151,7 @@
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
             app:layout_constraintTop_toBottomOf="@id/titleForum"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="8dp"/>
+            app:layout_constraintEnd_toEndOf="parent"/>
 
         <TextView
             android:id="@+id/titleSpecialist"
@@ -161,11 +160,11 @@
             app:layout_constraintTop_toBottomOf="@id/forumRecyclerView"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
-            android:text="Specialist (Terbaik)"
+            android:text="Specialist (Top 5)"
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:fontFamily="@font/firasans"
             android:textSize="16sp"
-            android:textColor="@color/twitterColour"
+            android:textColor="@android:color/black"
             android:textStyle="bold" />
 
         <androidx.recyclerview.widget.RecyclerView
