Change Home Layout

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragment.Home">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -14,30 +14,51 @@
             android:id="@+id/progressBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
             android:visibility="gone"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <de.hdodenhof.circleimageview.CircleImageView
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolBar"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:background="@drawable/action_bar_3"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
             android:id="@+id/userPic"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:src="@drawable/ic_user"
+            android:background="@drawable/background_pic_user"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/firstLetter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/firasans"
+            android:text="M"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="@id/userPic"
+            app:layout_constraintEnd_toEndOf="@id/userPic"
+            app:layout_constraintStart_toStartOf="@id/userPic"
+            app:layout_constraintTop_toTopOf="@id/userPic" />
 
         <TextView
             android:id="@+id/userName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginStart="8dp"
             android:fontFamily="@font/firasans"
             android:text="Hi Maulana"
-            android:textColor="@android:color/black"
+            android:textColor="@android:color/white"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="@id/userPic"
             app:layout_constraintStart_toEndOf="@id/userPic"
@@ -47,7 +68,7 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
-            android:src="@drawable/ic_search_black"
+            android:src="@drawable/ic_search_white"
             app:layout_constraintBottom_toBottomOf="@id/userPic"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/userPic" />
@@ -57,11 +78,12 @@
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
             app:fillColor="#FFFFFFFF"
-            app:layout_constraintEnd_toEndOf="@id/userPic"
-            app:layout_constraintStart_toStartOf="@id/userPic"
+            android:layout_marginTop="48dp"
+            app:layout_constraintBottom_toBottomOf="@id/toolBar"
+            app:layout_constraintEnd_toEndOf="@id/toolBar"
+            app:layout_constraintStart_toStartOf="@id/toolBar"
             app:layout_constraintTop_toBottomOf="@id/userPic"
             app:pageColor="#00000000"
             app:radius="3dp"
@@ -73,13 +95,13 @@
             android:id="@+id/allForums"
             android:layout_width="120dp"
             android:layout_height="120dp"
-            app:layout_constraintTop_toBottomOf="@id/carouselView"
-            app:layout_constraintStart_toStartOf="@id/carouselView"
-            app:layout_constraintEnd_toStartOf="@id/allSpecialists"
-            android:orientation="vertical"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
             android:background="@drawable/background_forum_specialist"
+            android:orientation="vertical"
             android:padding="@dimen/activity_vertical_margin"
-            android:layout_marginTop="@dimen/activity_vertical_margin">
+            app:layout_constraintEnd_toStartOf="@id/allSpecialists"
+            app:layout_constraintStart_toStartOf="@id/carouselView"
+            app:layout_constraintTop_toBottomOf="@id/carouselView">
 
             <ImageView
                 android:layout_width="50dp"
@@ -90,12 +112,12 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Forum"
-                android:layout_marginTop="8dp"
-                android:textColor="@color/twitterColour"
-                android:textSize="14sp"
                 android:layout_gravity="center"
-                android:fontFamily="@font/firasans" />
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/firasans"
+                android:text="Forum"
+                android:textColor="@color/twitterColour"
+                android:textSize="14sp" />
 
         </LinearLayout>
 
@@ -103,13 +125,13 @@
             android:id="@+id/allSpecialists"
             android:layout_width="120dp"
             android:layout_height="120dp"
-            app:layout_constraintTop_toBottomOf="@id/carouselView"
-            app:layout_constraintEnd_toEndOf="@id/carouselView"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
             android:background="@drawable/background_forum_specialist"
-            app:layout_constraintStart_toEndOf="@id/allForums"
             android:orientation="vertical"
             android:padding="@dimen/activity_vertical_margin"
-            android:layout_marginTop="@dimen/activity_vertical_margin">
+            app:layout_constraintEnd_toEndOf="@id/carouselView"
+            app:layout_constraintStart_toEndOf="@id/allForums"
+            app:layout_constraintTop_toBottomOf="@id/carouselView">
 
             <ImageView
                 android:layout_width="50dp"
@@ -120,12 +142,12 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Specialist"
-                android:layout_marginTop="8dp"
-                android:textColor="@color/twitterColour"
-                android:textSize="14sp"
                 android:layout_gravity="center"
-                android:fontFamily="@font/firasans" />
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/firasans"
+                android:text="Specialist"
+                android:textColor="@color/twitterColour"
+                android:textSize="14sp" />
 
         </LinearLayout>
 
@@ -133,15 +155,15 @@
             android:id="@+id/titleForum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/allForums"
-            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
-            android:text="Forum (Top 5)"
             android:layout_marginTop="32dp"
             android:fontFamily="@font/firasans"
-            android:textSize="16sp"
+            android:text="Forum (Top 5)"
             android:textColor="@android:color/black"
-            android:textStyle="bold" />
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/allForums" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/forumRecyclerView"
@@ -149,34 +171,34 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
-            app:layout_constraintTop_toBottomOf="@id/titleForum"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@id/titleForum" />
 
         <TextView
             android:id="@+id/titleSpecialist"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/forumRecyclerView"
-            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
-            android:text="Specialist (Top 5)"
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:fontFamily="@font/firasans"
-            android:textSize="16sp"
+            android:text="Specialist (Top 5)"
             android:textColor="@android:color/black"
-            android:textStyle="bold" />
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/forumRecyclerView" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/specialistRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
-            app:layout_constraintTop_toBottomOf="@id/titleSpecialist"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="@dimen/activity_vertical_margin"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/titleSpecialist" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
