--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
-    <color name="twitterColour">#1DA1F2</color>
+    <color name="statusBar">#5bbcf7</color>
+    <color name="twitterColour">#72c9fe</color>
 </resources>
