--- a/app/src/main/res/layout/fragment_add_forum.xml
+++ b/app/src/main/res/layout/fragment_add_forum.xml
@@ -13,6 +13,7 @@
             android:id="@+id/toolBar"
             android:layout_width="match_parent"
             android:layout_height="150dp"
+            android:background="@drawable/action_bar_3"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -30,18 +31,107 @@
             app:layout_constraintTop_toTopOf="@id/toolBar" />
 
         <LinearLayout
+            android:id="@+id/laptop"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:background="@drawable/background_forum_specialist"
+            android:orientation="vertical"
+            android:padding="@dimen/activity_vertical_margin"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/smartphone"
+            app:layout_constraintTop_toBottomOf="@id/toolBar">
+
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_laptop" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/firasans"
+                android:text="Laptop"
+                android:textColor="@color/twitterColour"
+                android:textSize="14sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/smartphone"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:background="@drawable/background_forum_specialist"
+            android:orientation="vertical"
+            android:padding="@dimen/activity_vertical_margin"
+            app:layout_constraintStart_toEndOf="@id/laptop"
+            app:layout_constraintEnd_toStartOf="@id/computer"
+            app:layout_constraintTop_toBottomOf="@id/toolBar">
+
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_smartphone" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/firasans"
+                android:text="Phone"
+                android:textColor="@color/twitterColour"
+                android:textSize="14sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/computer"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:background="@drawable/background_forum_specialist"
+            android:orientation="vertical"
+            android:padding="@dimen/activity_vertical_margin"
+            app:layout_constraintStart_toEndOf="@id/smartphone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/toolBar">
+
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_laptop" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/firasans"
+                android:text="Laptop"
+                android:textColor="@color/twitterColour"
+                android:textSize="14sp" />
+        </LinearLayout>
+
+
+
+        <LinearLayout
             android:id="@+id/background"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
             android:layout_marginEnd="24dp"
             android:background="@drawable/background_add_forum"
             android:orientation="vertical"
             android:padding="24dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolBar">
+            app:layout_constraintTop_toBottomOf="@id/laptop">
 
             <TableLayout
                 android:layout_width="match_parent"
@@ -85,19 +175,6 @@
                         android:textColor="@android:color/black"
                         android:textCursorDrawable="@drawable/color_cursor"
                         android:textSize="14sp" />
-                </TableRow>
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/activity_vertical_margin">
-
-                    <Spinner
-                        android:id="@+id/forumCategory"
-                        android:layout_width="195dp"
-                        android:layout_height="wrap_content"
-                        android:theme="@style/Spinner"
-                        android:spinnerMode="dropdown" />
                 </TableRow>
 
                 <TableRow
