--- a/app/src/main/res/layout/fragment_add_forum.xml
+++ b/app/src/main/res/layout/fragment_add_forum.xml
@@ -83,7 +83,7 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/firasans"
-                android:text="Phone"
+                android:text="Hp"
                 android:textColor="@color/twitterColour"
                 android:textSize="14sp" />
         </LinearLayout>
@@ -104,7 +104,7 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center"
-                android:src="@drawable/ic_laptop" />
+                android:src="@drawable/ic_computer" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -112,7 +112,7 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/firasans"
-                android:text="Laptop"
+                android:text="Komputer"
                 android:textColor="@color/twitterColour"
                 android:textSize="14sp" />
         </LinearLayout>
