--- a/app/src/main/res/drawable/background_forum_specialist.xml
+++ b/app/src/main/res/drawable/background_forum_specialist.xml
@@ -1,11 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="@color/twitterColour">
 
-    <corners android:radius="10dp" />
+    <item>
+        <shape>
 
-    <solid android:color="@android:color/white" />
+            <solid android:color="#FFF" />
 
-    <stroke android:color="@color/twitterColour" android:width="1dp" />
+            <stroke
+                android:width="1dp"
+                android:color="@color/twitterColour" />
 
-</shape>
+            <corners android:radius="10dp" />
+
+        </shape>
+        <selector>
+            <item
+                android:color="@android:color/white"
+                android:state_checked="true" />
+            <item
+                android:color="@android:color/white"
+                android:state_pressed="true" />
+            <item
+                android:color="@android:color/white"
+                android:state_activated="true" />
+        </selector>
+    </item>
+
+</ripple>
