--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,154 +1,183 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.Register">
 
-    <androidx.appcompat.widget.Toolbar
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:id="@+id/toolBar"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:background="@drawable/action_bar"
-        android:layout_height="150dp" />
+        android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        app:layout_constraintTop_toTopOf="@id/toolBar"
-        app:layout_constraintStart_toStartOf="@id/toolBar"
-        app:layout_constraintEnd_toEndOf="@id/toolBar"
-        app:layout_constraintBottom_toBottomOf="@id/toolBar"
-        android:text="D A F T A R"
-        android:fontFamily="@font/nexabold"
-        android:textColor="@android:color/white"
-        android:textSize="26sp" />
-
-    <View
-        android:layout_width="400dp"
-        android:layout_height="400dp"
-        app:layout_constraintTop_toBottomOf="@id/toolBar"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:background="@drawable/gray_circle" />
-
-    <LinearLayout
-        android:id="@+id/linear1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/toolBar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginTop="50dp"
-        android:background="@drawable/background_button_submit"
-        android:paddingStart="24dp"
-        android:paddingEnd="24dp"
-        android:paddingTop="24dp"
-        android:paddingBottom="50dp"
-        android:orientation="vertical">
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolBar"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:background="@drawable/action_bar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Email"
-            android:fontFamily="@font/firasans"
-            android:textColor="@color/twitterColour"
-            android:textSize="12sp" />
+            android:layout_margin="20dp"
+            android:fontFamily="@font/nexabold"
+            android:text="D A F T A R"
+            android:textColor="@android:color/white"
+            android:textSize="26sp"
+            app:layout_constraintBottom_toBottomOf="@id/toolBar"
+            app:layout_constraintEnd_toEndOf="@id/toolBar"
+            app:layout_constraintStart_toStartOf="@id/toolBar"
+            app:layout_constraintTop_toTopOf="@id/toolBar" />
 
+        <View
+            android:layout_width="400dp"
+            android:layout_height="400dp"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:background="@drawable/gray_circle"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/toolBar" />
 
-        <EditText
-            android:id="@+id/email"
+        <LinearLayout
+            android:id="@+id/linear1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/firasans"
-            android:inputType="textEmailAddress"
-            android:backgroundTint="@color/twitterColour"
-            android:textColor="@android:color/black"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginEnd="32dp"
+            android:background="@drawable/background_button_submit"
+            android:orientation="vertical"
+            android:paddingStart="24dp"
+            android:paddingTop="24dp"
+            android:paddingEnd="24dp"
+            android:paddingBottom="50dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/toolBar">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/firasans"
+                android:text="Nama"
+                android:textColor="@color/twitterColour"
+                android:textSize="12sp" />
+
+
+            <EditText
+                android:id="@+id/name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:backgroundTint="@color/twitterColour"
+                android:drawableEnd="@drawable/ic_person_blue"
+                android:fontFamily="@font/firasans"
+                android:inputType="textEmailAddress"
+                android:paddingStart="8dp"
+                android:paddingEnd="@dimen/activity_horizontal_margin"
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:textColor="@android:color/black"
+                android:textSize="16sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/firasans"
+                android:text="Email"
+                android:textColor="@color/twitterColour"
+                android:textSize="12sp" />
+
+
+            <EditText
+                android:id="@+id/email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:backgroundTint="@color/twitterColour"
+                android:drawableEnd="@drawable/ic_email_blue"
+                android:fontFamily="@font/firasans"
+                android:inputType="textEmailAddress"
+                android:paddingStart="8dp"
+                android:paddingEnd="@dimen/activity_horizontal_margin"
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:textColor="@android:color/black"
+                android:textSize="16sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/firasans"
+                android:text="Password"
+                android:textColor="@color/twitterColour"
+                android:textSize="12sp" />
+
+
+            <EditText
+                android:id="@+id/password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:backgroundTint="@color/twitterColour"
+                android:drawableEnd="@drawable/ic_lock_blue"
+                android:fontFamily="@font/firasans"
+                android:inputType="textPassword"
+                android:paddingStart="8dp"
+                android:paddingEnd="@dimen/activity_horizontal_margin"
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:textColor="@android:color/black"
+                android:textSize="16sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/firasans"
+                android:text="Re-Type"
+                android:textColor="@color/twitterColour"
+                android:textSize="12sp" />
+
+
+            <EditText
+                android:id="@+id/reTypePass"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/twitterColour"
+                android:drawableEnd="@drawable/ic_lock_blue"
+                android:fontFamily="@font/firasans"
+                android:inputType="textPassword"
+                android:paddingStart="8dp"
+                android:paddingEnd="@dimen/activity_horizontal_margin"
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:textColor="@android:color/black"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/btnRegister"
+            android:layout_width="150dp"
+            android:layout_height="60dp"
+            android:background="@drawable/background_button_login_register"
+            android:text="Daftar"
+            android:textColor="@android:color/white"
             android:textSize="16sp"
-            android:paddingStart="8dp"
-            android:paddingEnd="@dimen/activity_horizontal_margin"
-            android:drawableEnd="@drawable/ic_person_blue"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:layout_marginBottom="@dimen/activity_vertical_margin" />
+            app:layout_constraintBottom_toBottomOf="@id/linear1"
+            app:layout_constraintEnd_toEndOf="@id/linear1"
+            app:layout_constraintStart_toStartOf="@id/linear1"
+            app:layout_constraintTop_toBottomOf="@id/linear1" />
 
         <TextView
+            android:id="@+id/haveAccount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Password"
-            android:fontFamily="@font/firasans"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:text="Sudah Punya Akun ?"
             android:textColor="@color/twitterColour"
-            android:textSize="12sp" />
+            android:textSize="16sp"
+            android:textStyle="italic"
+            app:layout_constraintEnd_toEndOf="@id/btnRegister"
+            app:layout_constraintStart_toStartOf="@id/btnRegister"
+            app:layout_constraintTop_toBottomOf="@id/btnRegister" />
 
-
-        <EditText
-            android:id="@+id/password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/firasans"
-            android:inputType="textPassword"
-            android:textColor="@android:color/black"
-            android:backgroundTint="@color/twitterColour"
-            android:paddingStart="8dp"
-            android:paddingEnd="@dimen/activity_horizontal_margin"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:drawableEnd="@drawable/ic_lock_blue"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:textSize="16sp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Re-Type"
-            android:fontFamily="@font/firasans"
-            android:textColor="@color/twitterColour"
-            android:textSize="12sp" />
-
-
-        <EditText
-            android:id="@+id/reTypePass"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/firasans"
-            android:inputType="textPassword"
-            android:textColor="@android:color/black"
-            android:paddingStart="8dp"
-            android:backgroundTint="@color/twitterColour"
-            android:paddingEnd="@dimen/activity_horizontal_margin"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:drawableEnd="@drawable/ic_lock_blue"
-            android:textSize="16sp" />
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/btnRegister"
-        android:layout_width="150dp"
-        android:layout_height="60dp"
-        app:layout_constraintTop_toBottomOf="@id/linear1"
-        app:layout_constraintStart_toStartOf="@id/linear1"
-        app:layout_constraintEnd_toEndOf="@id/linear1"
-        app:layout_constraintBottom_toBottomOf="@id/linear1"
-        android:background="@drawable/background_button_login_register"
-        android:textColor="@android:color/white"
-        android:textSize="16sp"
-        android:text="Daftar" />
-
-    <TextView
-        android:id="@+id/haveAccount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@id/btnRegister"
-        app:layout_constraintTop_toBottomOf="@id/btnRegister"
-        app:layout_constraintEnd_toEndOf="@id/btnRegister"
-        android:text="Sudah Punya Akun ?"
-        android:textColor="@color/twitterColour"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:textSize="16sp"
-        android:textStyle="italic" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
